tests/baselines/reference/nameCollisions.errors.txt
==== tests/cases/compiler/nameCollisions.ts (9 errors) ====
    module T {
        var x = 2;
    
        module x { // error
               ~
!!! error TS2300: Duplicate identifier 'x'.
            export class Bar {
                test: number;
            }
        }
    
        module z {
            var t;
        }
        var z; // error
            ~
!!! error TS2300: Duplicate identifier 'z'.
    
        module y {
               ~
!!! error TS2434: A module declaration cannot be located prior to a class or function with which it is merged
            var b;
        }
    
        class y { } // error
    
        var w;
        module w { } //ok
    
        var f;
        function f() { } //error
                 ~
!!! error TS2300: Duplicate identifier 'f'.
    
        function f2() { }
        var f2; // error
            ~~
!!! error TS2300: Duplicate identifier 'f2'.
    
        var i;
        interface i { } //ok
    
        class C { }
        function C() { } // error
                 ~
!!! error TS2300: Duplicate identifier 'C'.
    
        function C2() { }
        class C2 { } // error
              ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
        function fi() { }
        interface fi { } // ok
    
        class cli { }
        interface cli { } // error
                  ~~~
!!! error TS2300: Duplicate identifier 'cli'.
    
        interface cli2 { }
        class cli2 { } // error
              ~~~~
!!! error TS2300: Duplicate identifier 'cli2'.
    }